tests/NormalTests/paczka1/small_fuzzy/32785473.err
Error in line 1: al5 A528 26,63
Error in line 7: al5 S222 37,2
